8215792: AArch64: String.indexOf generates incorrect result

Reviewed-by: dsamersoff